# snippets

./: .gitignore  COPYRIGHT  LICENSE  README.md  go.mod  main.c  main.go  readme.md  rust  utf8-opt.js  utf8-string.js
ECMAScript6/: import.js
R/: hello.r
bat/: serve-directory.bat
bower/: .bowerrc  .gitignore  bower.json
c/: 1b.c  24bit-color.c  Makefile  anonymous-union.c  array.c  coins.c  comment.c  digraph.c  dup2.c  fork.c  fun_140001000.c  function.c  hello.c  ieee754-from-hex.c  ieee754-to-hex.c  ieee754.c  infinite-2.c  infinite.c  logic.c  long-double.c  loop-optimization.c  macro.c  main.c  moduler.c  msign.c  no-libc.c  nonblock-io.c  pisano-calculator.c  pointer.c  pointer2.c  popcnt.c  postfix.c  preprocessor.c  pretty-pair.c  scanf-error-handling.c  scanf.c  shared-file.c  signal.c  skip-libc-init.c  sort.c  (+13 more)
cpp/: .gitignore  Makefile  anonymous-namespace.cpp  array-template.cpp  array.cpp  array2.cpp  auto.cpp  calc.cpp  cin.cpp  cin2.cpp  const-method.cpp  constexpr.cpp  cout.cpp  default-arguments.cpp  do-nothing.cpp  enum-class.cpp  env.cpp  epoch.cpp  exception-with-stacktrace.cpp  exception.cpp  factorial.cpp  field.cpp  finally.cpp  for.cpp  function-pointer.cpp  gc.cpp  infinite.cpp  io.cpp  is-power-of-2.cpp  ldouble.cpp  link.cpp  list-initialization.cpp  log2.cpp  main.cpp  make-array.cpp  morse.cpp  no-libc.cpp  operator.cpp  or.cpp  overloading.cpp  (+25 more)
elixir/: .gitignore  README.md  hello_module.ex
erlang/: README.md  hello.erl
flow/: unsound.js
python/uniformness-of-random/: README.md  main.ipynb  main.py  pyproject.toml
(+322 files in other folders)
