[project]
name = "uniformness-of-random"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "plotly[express]>=6.2.0",
    "ruff>=0.12.4",
    "scipy>=1.16.0",
]
